# now-playing

./: .gitignore  Dockerfile  README.md  config.example.json  config.py  pyproject.toml  requirements.txt  start.sh  vercel.json
api/: index.py
client/: __init__.py  main.py  models.py  store.py
client/poller/: __init__.py  base.py  factory.py  get_media_info.jxa  macos.py  windows.py
client/poller/mediaremote-adapter/MediaRemoteAdapter.framework/Versions/A/: MediaRemoteAdapter
client/renderer/: __init__.py  engine.py
client/renderer/templates/: user_styles.css
client/utils/: image_metadata.py  logging_config.py
previews/: index.html
server/: public_client.py
tests/: test_models.py  test_renderer_artwork.py  test_renderer_templates.py
web/: i18n.js  index.html  script.js  style.css
